Characteristics of the Symmetric Group

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -72,7 +72,7 @@
         \item Computation shows that $A^8=e$ and $B^{52}=e$.
         \begin{itemize}
             \item For $A$, $2\to 3\to 5\to 9\to 17\to 33\to 14\to 27\to 2$.
-            \item For $B$, ??
+            \item For $B$, we can do the same thing but obviously the cycle is much longer.
         \end{itemize}
         \item We shouldn't necessarily have an intuition for this right now, but in doing more examples, Calegari certainly believes we can develop it.
         \item First HW problem (due Friday). Can, just by using combinations of $A$ and $B$, we generate any possible shuffle? Hint: Develop your intuition on a smaller value of 52.
