--- a/preamble.tex
+++ b/preamble.tex
@@ -8,6 +8,7 @@
 \usepackage{siunitx}
 \usepackage{tabu}
 \usepackage{tikz,graphicx}
+\usepackage{float}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{bm,physics,nicematrix}
 \usepackage[hidelinks]{hyperref}
