--- a/preamble.tex
+++ b/preamble.tex
@@ -37,7 +37,10 @@
 \deffootnotemark{\textsuperscript{\textup{[}\thefootnotemark\textup{]}}}
 \deffootnote[1.8em]{0em}{0em}{\textsuperscript{\thefootnote}}
 
+\usetikzlibrary{matrix}
+
 \DeclareMathOperator{\spn}{span}
+\setcounter{MaxMatrixCols}{20}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
