--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -22,11 +22,15 @@
 
 \pagenumbering{arabic}
 \pagestyle{main}
-\renewcommand{\leftmark}{Problem Set \thesection}{}
+\renewcommand{\leftmark}{Problem Set \thesection}
 \subfile{PSet1/pset1.tex}
 \newpage
 
 \subfile{PSet2/pset2.tex}
+\newpage
+
+\renewcommand{\leftmark}{References}
+\printbibliography[heading=bibintoc]
 
 
 
