--- a/preamble.tex
+++ b/preamble.tex
@@ -52,5 +52,6 @@
 \newcommand{\R}{\mathbb{R}}
 
 \newcommand{\inp}[2]{\left\langle{#1},{#2}\right\rangle}
+\newcommand{\gen}[1]{\left\langle{#1}\right\rangle}
 
 \usepackage{subfiles}
