--- a/Notes/Week2/week2.tex
+++ b/Notes/Week2/week2.tex
@@ -170,7 +170,7 @@
 
 
 
-\section{Characteristics of the Symmetric Group}
+\section{The Symmetric Group}
 \begin{itemize}
     \item \marginnote{10/5:}\textbf{Symmetric group} (on $n$ letters): The set of all bijections from the set of numbers $\{1,\dots,n\}$ to itself, whose operation is function composition. \emph{Denoted by} $\bm{S_n}$.
     \begin{itemize}
