--- a/preamble.tex
+++ b/preamble.tex
@@ -45,6 +45,7 @@
 
 \DeclareMathOperator{\spn}{span}
 \DeclareMathOperator{\lcm}{lcm}
+\DeclareMathOperator{\im}{im}
 \setcounter{MaxMatrixCols}{20}
 
 \newcommand{\N}{\mathbb{N}}
