Problem Set 3 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -29,6 +29,9 @@
 \subfile{PSet2/pset2.tex}
 \newpage
 
+\subfile{PSet3/pset3.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
