--- a/preamble.tex
+++ b/preamble.tex
@@ -50,7 +50,9 @@
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\Q}{\mathbb{Q}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\F}{\mathbb{F}}
 
 \newcommand{\inp}[2]{\left\langle{#1},{#2}\right\rangle}
 \newcommand{\gen}[1]{\left\langle{#1}\right\rangle}
